--- a/site/index.qmd
+++ b/site/index.qmd
@@ -1,8 +1,7 @@
 # Welcome to DIVE
 
-Data-driven Insights into Variation and Epigenetics across coral species.
+Data-driven Insights into Variation and Epigenetics across coral species. This data delivery platform spotlights a genome browser to explore epigenetic genome features across three species.
 
-![](img/dive.png){fig-align="center"}
-
+![](img/dive.png){fig-align="center" width="500px"}
 
 👉 [Explore JBrowse Genome Browser](jbrowse/index.html)
