--- a/site/about.qmd
+++ b/site/about.qmd
@@ -12,7 +12,9 @@ bioRxiv 2025.03.15.643469; doi: <https://doi.org/10.1101/2025.03.15.643469>
 
 ::: {.badges}
 <p>
-  <img src="https://img.shields.io/github/v/release/urol-e5/deep-dive-genome-browser" />
+  <a href="https://github.com/urol-e5/deep-dive-genome-browser/releases">
+    <img src="https://img.shields.io/github/v/release/urol-e5/deep-dive-genome-browser" />
+  </a>
   <img src="https://img.shields.io/github/last-commit/urol-e5/deep-dive-genome-browser" />
   <img src="https://img.shields.io/badge/jbrowse-v3.6.2-darkblue" />
 </p>
